@@ -9318,6 +9318,8 @@ result is a \typ{INTMOD}, or \kbd{x} is a scalar or a \typ{POL} and \kbd{y} a
 \fun{GEN}{gmodulss}{long x, long y} same as \key{gmodulo} except both
 \kbd{x} and \kbd{y} are \kbd{long}s.
 
+\fun{GEN}{lift_shallow}{GEN x} shallow version of \tet{lift}
+
 \fun{GEN}{liftall_shallow}{GEN x} shallow version of \tet{liftall}
 
 \fun{GEN}{liftint_shallow}{GEN x} shallow version of \tet{liftint}
