@@ -55,6 +55,7 @@ BA 29- [libpari] FlxXC_to_F2xXC, F2xXC_to_ZXXC
    31- [libpari] cmp_padic
    32- [libpari] ZV_snf_trunc, ZM_hnfmodall_i, ZM_hnfall_i
    33- [libpari] uisprime_101, uisprime_661
+   34- [libpari] lift_shallow
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
